# protobuf-haxe-hashlink

./: README.md
heaps/: hl.hxml  main.hl
heaps/src/: Main.hx
heaps/src/net/: WebSocketClient.hx
heaps/src/protobuf/: ProtoHL.hx
nodejs_ws/: HelloWorld.proto  index.js  package.json
protobuf/: CMakeLists.txt  protobuf_hl.cpp
protobuf/cmake/: protobuf-config-version.cmake  protobuf-module.cmake  protobuf-targets.cmake
protobuf/lib/: libprotobuf-lite.lib
protobuf/lib/pkgconfig/: protobuf-lite.pc  protobuf.pc
